RIA-6187 - add fortify scan on nightly build