@@ -195,6 +195,12 @@ task contract(type: Test) {
     classpath = sourceSets.contractTest.runtimeClasspath
 }
 
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+    getMainClass().set("uk.gov.hmcts.fortifyclient.FortifyClientMainApp")
+    classpath += sourceSets.tests.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 project.ext {
     pacticipant = 'ia_caseApi'
     pacticipantVersion = getCheckedOutGitCommitHash()
@@ -374,7 +380,7 @@ dependencies {
     testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.3.1'
     testImplementation group: 'uk.gov.hmcts.reform', name: 'document-management-client', version: '7.0.0'
     testImplementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.3'
-
+    testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0'
 
     //pact contract testing
     contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: '4.1.41'
